# buildingseattle

./: .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  audit_entity_graph.py  direct_import.py  entity_graph.js  import.sql  migration_entity_graph.sql  migration_entity_graph_upstream_compat.sql  migration_ingest_logs.sql  migration_permit_alert_subscriptions.sql  migration_permit_base_feed_columns.sql  migration_permit_enrichment.sql  migration_permit_import_columns.sql  migration_permit_people.sql  migration_permit_review_dates.sql  migration_permit_status_changes.sql  migration_permit_updated_at.sql  og-image-opt.b64  og-image.b64  package-lock.json  package.json  page_views_migration.sql  pyproject.toml  pyroject.toml  schema.sql  sdci_detail_probe.py  sdci_detail_probe_results.jsonl  sdci_detail_probe_summary.md  sdci_enrich.py  sdci_permit_enrichments.jsonl  sdci_scraper.py  seed_entity_graph.sql  worker.js  wrangler.toml
.antigravitycli/: 80fd4ea6-cc97-4162-9a39-262811bb2ea3.json
.github/workflows/: enrich-daily.yml
docs/: design-audit.md  dns-aid.md
docs/superpowers/plans/: 2026-04-02-internal-utility-dashboard.md
docs/superpowers/specs/: 2026-04-02-internal-utility-dashboard-design.md
scripts/: enrich_unenriched.py  entity_report.mjs
tests/: entity_graph.test.js  test_direct_import.py  test_sdci_enrich.py  worker.test.js
