[project]
name = "buildingseattle"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "httpx[http2]>=0.27.0",
    "tenacity>=8.2.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",         # For better CLI output
    "google-cloud-bigquery>=3.42.0",
    "tabulate>=0.10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "ruff>=0.1.0"]
